--- a/attestation-viewer/package.json
+++ b/attestation-viewer/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "js-yaml": "^4.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-json-view": "^1.21.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
